--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -17,15 +17,17 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.301
-    - name: apt helper action
-      uses: ryankurte/action-apt@v0.1.0
+    - name: Deploy docker-compose
+      uses: hasnat/deploy-docker-compose@v0.1-alpha
       with:
-        # architectures to pass to dpkg --add-architecture
-        architectures: ubuntu-latest
-        # apt packages to install
-        packages: docker docker-compose 
-    - name: Install environment
-      run: docker-compose up -d
+        # repo access token
+        token: 8599aef216b0cbdfbb39ec814476c3a85d8fe1ef
+        # Repo to deploy
+        repository: RT_Service_2020
+        # Repo branch
+        branch: master
+        # Use dockerfile when you would like to explicitly build a Dockerfile
+        composefolder: docker-compose-external-services.yml
     - name: Install dependencies
       run: dotnet restore --project "./CreativeTim.Argon.DotNet.Core.Free/CreativeTim.Argon.DotNetCore.Free.csproj"
     - name: Build
