--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -17,17 +17,8 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.301
-    - name: Deploy docker-compose
-      uses: hasnat/deploy-docker-compose@v0.1-alpha
-      with:
-        # repo access token
-        token: 8599aef216b0cbdfbb39ec814476c3a85d8fe1ef
-        # Repo to deploy
-        repository: RT_Service_2020
-        # Repo branch
-        branch: master
-        # Use dockerfile when you would like to explicitly build a Dockerfile
-        composefolder: docker-compose-external-services.yml
+    - name: Build the stack
+      run: docker-compose up -d
     - name: Install dependencies
       run: dotnet restore --project "./CreativeTim.Argon.DotNet.Core.Free/CreativeTim.Argon.DotNetCore.Free.csproj"
     - name: Build
